--- a/COMP-4549-Assignment3/Views/Services/Details.cshtml
+++ b/COMP-4549-Assignment3/Views/Services/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model COMP_4549_Assignment3.Models.Client
+﻿@model COMP_4549_Assignment3.Models.Services
 
 @{
     ViewBag.Title = "Details";
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Client</h4>
+    <h4>Services</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -17,14 +17,6 @@
         <dd>
             @Html.DisplayFor(model => model.Name)
         </dd>
-
-        @*<dt>
-            @Html.DisplayNameFor(model => model.Address)
-        </dt>*@
-
-        @*<dd>
-            @Html.DisplayFor(model => model.Address)
-        </dd>*@
 
     </dl>
 </div>
