--- a/COMP-4549-Assignment3/Views/Jobs/Delete.cshtml
+++ b/COMP-4549-Assignment3/Views/Jobs/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model COMP_4549_Assignment3.Models.Client
+﻿@model COMP_4549_Assignment3.Models.Jobs
 
 @{
     ViewBag.Title = "Delete";
@@ -8,24 +8,16 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Client</h4>
+    <h4>Jobs</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.ClientID)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.ClientID)
         </dd>
-
-        @*<dt>
-            @Html.DisplayNameFor(model => model.Address)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Address)
-        </dd>*@
 
     </dl>
 
