--- a/COMP-4549-Assignment3/Views/Services/Delete.cshtml
+++ b/COMP-4549-Assignment3/Views/Services/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model COMP_4549_Assignment3.Models.Client
+﻿@model COMP_4549_Assignment3.Models.Services
 
 @{
     ViewBag.Title = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Client</h4>
+    <h4>Services</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -18,14 +18,6 @@
         <dd>
             @Html.DisplayFor(model => model.Name)
         </dd>
-
-        @*<dt>
-            @Html.DisplayNameFor(model => model.Address)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Address)
-        </dd>*@
 
     </dl>
 
