--- a/COMP-4549-Assignment3/Views/Shared/_Layout.cshtml
+++ b/COMP-4549-Assignment3/Views/Shared/_Layout.cshtml
@@ -25,6 +25,8 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Clients", "Index", "Clients")</li>
                     <li>@Html.ActionLink("Employees", "Index", "Employees")</li>
+                    <li>@Html.ActionLink("Services", "Index", "Services")</li>
+                    <li>@Html.ActionLink("Jobs", "Index", "Jobs")</li>
                 </ul>
             </div>
         </div>
