Initial Completion of Models

--- a/COMP-4549-Assignment3/Views/Jobs/Details.cshtml
+++ b/COMP-4549-Assignment3/Views/Jobs/Details.cshtml
@@ -18,6 +18,14 @@
             @Html.DisplayFor(model => model.ClientID)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Name)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Name)
+        </dd>
+
     </dl>
 </div>
 <p>
