--- a/COMP-4549-Assignment3/Views/Jobs/Create.cshtml
+++ b/COMP-4549-Assignment3/Views/Jobs/Create.cshtml
@@ -18,7 +18,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ServiceID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ServiceID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("ServiceID", null, htmlAttributes: new { @class = "form-control" } )
                 @Html.ValidationMessageFor(model => model.ServiceID, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -26,7 +26,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ClientID, "CustomerName", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("CustomerID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("ClientID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ClientID, "", new { @class = "text-danger" })
             </div>
         </div>
