Adjust field names

--- a/COMP-4549-Assignment3/Views/Clients/Details.cshtml
+++ b/COMP-4549-Assignment3/Views/Clients/Details.cshtml
@@ -18,17 +18,9 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ClientID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ClientID)
-        </dd>
-
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.ClientID }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
