--- a/COMP-4549-Assignment3/Views/Jobs/Details.cshtml
+++ b/COMP-4549-Assignment3/Views/Jobs/Details.cshtml
@@ -10,6 +10,22 @@
     <h4>Jobs</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Client.Name)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Client.Name)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Service.ServiceName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Service.ServiceName)
+        </dd>
+
     </dl>
 </div>
 <p>
