--- a/COMP-4549-Assignment3/Views/Jobs/Index.cshtml
+++ b/COMP-4549-Assignment3/Views/Jobs/Index.cshtml
@@ -11,11 +11,23 @@
 </p>
 <table class="table">
     <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Client.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Service.ServiceName)
+        </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Client.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Service.ServiceName)
+        </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.JobID }) |
             @Html.ActionLink("Details", "Details", new { id=item.JobID }) |
